--- a/skyfolk/templates/account/afinidad.html
+++ b/skyfolk/templates/account/afinidad.html
@@ -3,12 +3,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<link rel="stylesheet" type="text/css" href="css/materialize.css" />
-		<link rel="stylesheet" type="text/css" href="afinidad.css" />
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/materialize.css" />
+		<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/afinidad.css" />
+		<link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.min.css"  media="screen,projection"/>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<script type="text/javascript" src="js/materialize.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
 
 		  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
