--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -825,7 +825,7 @@ body > .container {
 }
 
 .follower-card {
-  width: auto;
+  width: 100%;
   height: 250px;
   float: left;
   margin-top: -25px;
@@ -2034,9 +2034,11 @@ float:left;
   z-index: 2;
 }
 .wrapper .widget-wr img {
-  width: 99%;
+  width: 99.931%;
   height: 100%;
   border: 2px solid #fff;
+  margin-left: auto;
+  margin-right: auto;
 }
 .wrapper .widget-wr .widget-wr-ans {
   position: relative;
