--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -74,11 +74,16 @@
        	
        {% block content %}{% endblock %}
     <div class="footer_base">   
-      <div class="footer-copyright blue-text text-darken-2">
+      <div class="col s3 m3 l12footer-copyright blue-text text-lighten-5">
             <div class="container">
-            © 2015 Copyright
-            <a class="blue-text text-darken-4 right" href="#!">More Links</a>
-            <a id="about" class="blue-text text-darken-4 right" href="/about">Sobre Skyfolk</a>
+            <a class="blue-text text-lighten-5 left">© 2015 Copyright</a>
+            <a class="blue-text text-lighten-5 right" href="#!">More Links</a>
+            <a id="about" class="blue-text text-lighten-5" href="/about">Sobre Skyfolk</a>
+            <a id="Blog" class="blue-text text-lighten-5" href="/blog">Blog</a>
+            <a id="tutorial" class="blue-text text-lighten-5" href="/blog">Ayuda</a>
+            <a id="empleo" class="blue-text text-lighten-5" href="/blog">Trabaja con nosotros</a>
+            <a id="anunciarse" class="blue-text text-lighten-5" href="/blog">Anunciarse</a>
+            <a id="privacidad" class="blue-text text-lighten-5" href="/blog">Privacidad</a>
             </div>
           </div>
     </div>
