--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -53,7 +53,7 @@
     </head>
     <body> 
 <div class="namesn">
-    <div class="logo">
+    <div onclick="javascript:location.href='/'" class="logo">
             <h5><i>S</i>kyfolk.</h5>
                  <img src="{{STATIC_URL}}img/logo2.png">
     </div>
