--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -33,6 +33,7 @@ body {
   top: 110px;
   width: 150px;
   height: 100px;
+  cursor: pointer;
 }
 .logo img {
   width: 120px;
@@ -119,10 +120,21 @@ form {
     font-width: 100;
     left: 30px;
 }
-
+#id_remember {
+  left: -10%;
+  position: relative;
+  top: -0.15%;
+  display: inline;
+}
+#login .button {
+  position: relative;
+  text-align: center;
+  top: 30px;
+  left: 7%;
+}
 .form-3 label[for="id_remember"] {
   position: relative;
-  left: 80px;
+  left: 30%;
   font-size: 1.01121em;
   font-weight: 100;
   top: -4px;
