--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -12,6 +12,7 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/timeline.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/autocomplete.css" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
 <script src="{{STATIC_URL}}js/jquery.min.js"></script>
@@ -26,7 +27,7 @@
 <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
 <script src="{{STATIC_URL}}js/scrollReveal.js"></script>
 <script src="{{STATIC_URL}}js/scrollReveal.min.js"></script>
-
+<script src="{{STATIC_URL}}js/autocomplete.js"></script>
 <!-- Sweet Alert -->
 
 <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css">
@@ -61,6 +62,7 @@ $(document).ready(function(){
 });
 */
 </script>
+
 
 <script language="javascript">
 /*
@@ -105,6 +107,7 @@ top.window.outerWidth = screen.availWidth;
 </head>
 
 <body>
+
 {% block barra_navegacion %}
 <!-- <div id="oHBContainer"> -->
 <nav class="box-tool">
