--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -136,7 +136,7 @@ top.window.outerWidth = screen.availWidth;
     <li onclick="javascript:location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion</li>
     <li onclick="javascript:location.href='/messages'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
     <li onclick="javascript:location.href='/market'"><i class="fa fa-bookmark-o fa-lg"></i> Market</li>
-    <li><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
+    <li onclick="javascript:location.href='/relations'"><i class="fa fa-circle-o fa-lg"></i> Mis relaciones</li>
     <li><i class="fa fa-play fa-lg"></i> Multimedia</li>
   </nav>
 </div>
