modificando el index

--- a/skyfolk/templates/aboutskyfolk/aboutSkyfolk.html
+++ b/skyfolk/templates/aboutskyfolk/aboutSkyfolk.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Sobre Skyfolk - Conoce un poco más.</title>
+    <title>Sobre Skyfolk - Conoce un poco mas.</title>
     <script>
     $(document).ready(function(){
       $('.parallax').parallax();
